# datafc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
datafc/: __init__.py  exceptions.py
datafc/clubelo/: __init__.py  _client.py  _parsers.py  fetch_club_history_data.py  fetch_daily_ranking_data.py  fetch_fixtures_data.py
datafc/eloratings/: __init__.py  _client.py  _parsers.py  fetch_country_codes_data.py  fetch_country_matches_data.py  fetch_teams_data.py  fetch_tournament_codes_data.py  fetch_tournament_editions_data.py  fetch_tournament_groups_data.py  fetch_world_ranking_data.py
datafc/sofascore/: __init__.py  _core.py  _parsers.py  aio.py  fetch_average_positions_data.py  fetch_coordinates_data.py  fetch_formations_data.py  fetch_goal_networks_data.py  fetch_incidents_data.py  fetch_league_player_stats_data.py  fetch_lineups_data.py  fetch_match_data.py  fetch_match_details_data.py  fetch_match_h2h_data.py  fetch_match_odds_data.py  fetch_match_stats_data.py  fetch_momentum_data.py  fetch_past_matches_data.py  fetch_player_attribute_overviews_data.py  fetch_player_career_stats_data.py  fetch_player_data.py  fetch_player_match_log_data.py  fetch_player_national_team_data.py  fetch_player_stats_data.py  fetch_player_transfers_data.py  fetch_pregame_form_data.py  fetch_referee_stats_data.py  fetch_search_data.py  fetch_season_rounds_data.py  fetch_seasons_data.py  fetch_shots_data.py  fetch_squad_data.py  fetch_standings_data.py  fetch_substitutions_data.py  fetch_team_data.py  fetch_team_match_history_data.py  fetch_team_stats_data.py  (+2 more)
(+10 files in other folders)
